# swaysh

./: .gitignore  README.md  pyproject.toml
TinyJWL/: .gitignore  build.gradle.kts  jextract.sh  run.sh  settings.gradle.kts
TinyJWL/src/main/java/tinyjwl/: Tiny.java
src/: nylon.py  rename_workspace.py  run.py  switch_workspace.py  taskbar.py
src/nylon/: launcher.py  remote.py  switch_workspace.py
src/nylon/taskbar/: __init__.py
src/sandbox/: layer_shell.py  pipe_ipc.py  signals.py  window_sizing.py
src/swaymore/: launcher.py  move_to_workspace.py  remote.py  rename_workspace.py  swaymore.py
src/swaymore/taskbar/: battery.py  brightness.py  volume.py
src/swaysh/: move_to_workspace.py  remote.py  rename_workspace.py  swaysh.py  switch_workspace.py  util.py
src/swaysh/taskbar/: battery.py  brightness.py  taskbar.py  workspaces.py
src/taskbar/: clock.py  listener.py  taskbar.py  workspaces.py
swaymore/: .gitignore  README.md  pyproject.toml
swaymore/src/: swaymore.py
swaymore/src/sandbox/: schedule.py
swaymore/src/swaymore/: launcher.py  move_to_workspace.py  remote.py  swaymore.py  switch_workspace.py
swaymore/src/swaymore/taskbar/: battery.py  brightness.py  clock.py  taskbar.py  volume.py
tinywl/: .gitignore  build.gradle.kts  jextract.sh  run.sh
tinywl/src/main/java/tinywl/: Tiny.java
tinywl/src/main/kotlin/tinywl/: TinyWL.kt
