[tool.poetry]
name = "swaysh"
version = "0.2.0"
description = "Utilities for sway"
authors = ["klozovin"]
license = " GPL-3.0-only"

[tool.poetry.dependencies]
python = "3.11.*"
# PyGObject-stubs = "^3.0.0"
PyGObject-stubs = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
